--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -22,9 +22,9 @@
               <wrapper class="header">
                   <row class="collapse">
                     <columns small="5">
-                      <img src="/assets/img/logo.png" alt="hearsay">
+                      <img src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/logo.png" alt="hearsay">
                     </columns>
-                    <columns small="7">
+                    <columns small="7"  valign="bottom">
                       <p class="text-right"><a href="#">Click here to view this email in a browser</a></p>
                     </columns>
                   </row>
@@ -47,11 +47,11 @@
                         <columns>
                           <center>
                             <menu class="social-icons">
-                              <item href="#"><img src="/assets/img/facebook.png" alt="facebook"></item>
-                              <item href="#"><img src="/assets/img/twitter.png" alt="twitter"></item>
-                              <item href="#"><img src="/assets/img/linkedin.png" alt="linkedin"></item>
-                              <item href="#"><img src="/assets/img/google-plus.png" alt="google-plus"></item>
-                              <item href="#"><img src="/assets/img/hearsay.png" alt="hearsay"></item>
+                              <item href="#"><img src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/facebook.png" alt="facebook"></item>
+                              <item href="#"><img src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/twitter.png" alt="twitter"></item>
+                              <item href="#"><img src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/linkedin.png" alt="linkedin"></item>
+                              <item href="#"><img src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/google-plus.png" alt="google-plus"></item>
+                              <item href="#"><img src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/hearsay.png" alt="hearsay"></item>
                             </menu>
                           </center>
                         </columns>
@@ -63,7 +63,7 @@
                     <wrapper class="secondary download-app">
                       <row>
                         <columns small="3" large="2">
-                          <img class="float-center" src="/assets/img/hearsay.png" alt="hearsay">
+                          <img class="float-center" src="https://raw.githubusercontent.com/nyutka/content-email/master/src/assets/img/hearsay.png" alt="hearsay">
                         </columns>
                         <columns small="8" large="10">
                           <h4 class="small-text-center">Get our mobile app to publish posts on the go!</h4>
