--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -79,10 +79,13 @@ table.body .container {
     .container {
       background: transparent;
     }
-    a {
-      @media only screen and (max-width: #{$global-breakpoint}) {
-        font-size: 9px;
-      } 
+    p {
+      margin-bottom: 0;
+      a {
+        @media only screen and (max-width: #{$global-breakpoint}) {
+          font-size: 9px;
+        } 
+      }
     }
   }
 
