--- a/src/assets/scss/template/_template.scss
+++ b/src/assets/scss/template/_template.scss
@@ -39,17 +39,7 @@ table.body .column {
 .small-text {
   font-size: 12px;
 }
-.set-right-justified{
-  text-align: right;
-  display: block;
-  tbody {
-    display: inline-block;
-  }
-  table {
-    display: inline;
-    text-align: right;
-  }
-}
+
 table.body .container {
   @media only screen and (max-width: #{$global-breakpoint}) {
     width: 97% !important;
@@ -158,10 +148,13 @@ table.body .container {
       .callout {
         box-shadow: 0 0.5px 2px 0 rgba(0, 0, 0, 0.11);
         border-radius: 4px;
+        margin-bottom: 0;
       }
     }
     table.button {
       margin: 0;
+      width: 76px !important;
+      height: 35px !important;
     }
     img {
       height: 80px;
